# codex-sangpye-skill

./: .gitignore  LICENSE  README.en.md  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml
docs/: plan.md  spec.md
examples/demo/: analysis.json
productpage_skill/: __init__.py
sangpye_skill/: __init__.py  analysis.py  bundle_slicer.py  category_briefs.py  cli.py  codex_client.py  composer.py  constants.py  image_generator.py  pipeline.py  product_dna.py  section_language.py
scripts/: generate.py
spike/codex_oauth/: 01_text_analysis.py  02_image_with_ref.py  03_parallel_3.py  README.md
tests/: conftest.py  test_codex_client.py  test_pipeline_live.py
