[project]
name = "codex-productpage-skill"
version = "0.1.0"
description = "Generate Korean e-commerce product detail page images (13 sections, 1080x7500 combined) via Codex OAuth — no OpenAI API key required."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "genie"}]
keywords = ["codex", "image-generation", "ecommerce", "korean", "detail-page", "skill"]
dependencies = [
    "Pillow>=11.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
productpage = "productpage_skill.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["productpage_skill"]

[tool.pytest.ini_options]
markers = [
    "live: hits real codex OAuth (skipped by default; opt in with `pytest -m live`)",
]
addopts = "-m 'not live'"
